--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,8 @@
         android:icon="@drawable/m_logo"
         android:label="@string/app_name"
         android:testOnly="false"
-        android:theme="@style/NYAppTheme">
+        android:theme="@style/NYAppTheme"
+        >
 
         <activity
             android:name=".SplashActivity"
@@ -160,7 +161,7 @@
 
         <provider
 
-            android:name="android.support.v4.content.FileProvider"
+            android:name="androidx.core.content.FileProvider"
             android:authorities="com.youmi.android.addemo.fileProvider"
             android:exported="false"
             android:grantUriPermissions="true"
